# assistente_pedidos

./: .gitignore  aula01_linear_regression.ipynb  pyproject.toml  run.ipynb  run.py
src/controller/: buscar_movimentacao_controller.py
src/main/constructor/: buscar_movimentacao_constructor.py
src/model/model/: estoque.py
src/model/repositorios/interfaces/: movimentacao_estoque.py
src/model/repositorios/sankhya/: api_client.py
src/model/repositorios/sankhya/exceptions/: app_key_invalido.py  token_invalido.py
src/model/repositorios/xls/: movimentacao_estoque.py
